@@ -346,6 +346,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * User::isNewbie now uses the registration date and $wgAutoconfirmAge
 * Log views show message when no matches
 * Fix raw sitenotice display on database error
+* Fix autoconfirm check for old accounts
 
 
 === Caveats ===
